# Haski

./: .env.example  .gitignore  00_START_HERE.md  ACCEPTANCE_CRITERIA.md  ADMIN_API_CHECKLIST.md  ADMIN_API_IMPLEMENTATION.md  ADMIN_API_QUICK_REF.md  ADMIN_PANEL_DOCUMENTATION_INDEX.md  ADMIN_PANEL_README.md  ADMIN_RECOMMENDATIONS_COMPLETION.md  AI_PIPELINE_CAPABILITIES.md  ALL_DELIVERABLES.md  API_ENDPOINTS.md  API_RESPONSE_FORMAT.md  API_RESPONSE_UPGRADE.md  API_SPECIFICATION.md  APP_SHELL_COMPLETE.md  APP_SHELL_REFERENCE.md  ARCHITECTURE_DIAGRAMS.md  AUDIT_LOGGER_DOCUMENTATION.md  AUDIT_LOGGER_FINAL_REPORT.md  AUDIT_LOGGER_QUICK_REF.md  AUDIT_LOGGER_TESTS_SUMMARY.md  AUTHENTICATION_GUIDE.md  AUTH_COMPLETE.md  AUTH_DELIVERY_CHECKLIST.md  AUTH_DOCS_INDEX.md  AUTH_IMPLEMENTATION_SUMMARY.md  AUTH_QUICK_START.md  AUTH_USAGE_EXAMPLES.md  BACKEND_QUICKSTART.md  CAPABILITIES.md  CHECKLIST_COMPLETE.md  COMPLETE_VERIFICATION_REPORT.md  COMPLETION_REPORT.md  DATASET_DOWNLOAD_MANUAL.md  DELIVERABLES.md  DELIVERY_COMPLETE.md  DEPLOYMENT_READY.txt  DOWNLOAD_INSTRUCTIONS.md  (+107 more)
backend/: ADMIN_BACKEND_INTEGRATION.md  Dockerfile  alembic.ini  check_login_error.py  comprehensive_test.py  debug_login.py  dev.db  pyproject.toml  requirements.txt  reset_demo_users.py  seed_demo_users.py  simple_test.py  test_login.py  test_output.txt  test_results.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  (+1 more)
backend/migrations/: env.py
(+205 files in other folders)
