[tool.poetry]
name = "haski-backend"
version = "0.1.0"
description = "FastAPI backend for Haski"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95"
uvicorn = {extras = ["standard"], version = "^0.22"}
pydantic = "^1.10"
sqlalchemy = "^1.4"
alembic = "^1.11"
python-multipart = "^0.0.6"
requests = "^2.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
